<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lab03.PrincipalActivity" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:columnCount="8"
        android:rowCount="9" >

        <Button
            android:id="@+id/button4"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/btn_3" />

        <Button
            android:id="@+id/button1"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/btn_1" />

        <Button
            android:id="@+id/button3"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/btn_2" />

        <Button
            android:id="@+id/button2"
            android:layout_column="3"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/btn_Ad" />

        <Button
            android:id="@+id/button5"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/btn_4" />

        <Button
            android:id="@+id/button6"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/btn_5" />

        <Button
            android:id="@+id/button7"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/btn_6" />

        <Button
            android:id="@+id/button8"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/btn_7" />

        <Button
            android:id="@+id/button10"
            android:layout_column="3"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:text="@string/btn_Div" />

        <Button
            android:id="@+id/button11"
            android:layout_column="3"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/btn_Mul" />

        <Button
            android:id="@+id/button12"
            android:layout_column="3"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/btn_Sub" />

        <Button
            android:id="@+id/button13"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/btn_8" />

        <Button
            android:id="@+id/button14"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/btn_9" />

        <Button
            android:id="@+id/button15"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:text="@string/btn_0" />
    </GridLayout>

</RelativeLayout>